# VerilogRISCV_Pipeline

./: .gitmodules  CMakeLists.txt  README.md
examples/: branch.c  branch.core.trace  branch.sim2022.trace  branch_outdated.s  branch_upd.s  simple.s
src/: CMakeLists.txt  alu.sv  aluCodes.sv  constants.sv  core.sv  datapath.sv  dispatcher.sv  hazardUnit.sv  memory.sv  pipelineLatch.sv  programCounter.sv  registerFile.sv
testbenches/: tf_alu.sv  tf_memory.sv  tf_pc.sv  tf_pipelineLatch.sv  tf_regFile.sv
